src/compiler/snapshots/isa__compiler__lexer__tests__numbers-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"4.0\").next()"
---
Some(
    Ok(
        Spand {
            data: Real(
                4.0,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
)
