src/compiler/snapshots/isa__compiler__lexer__tests__numbers-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"5.0\").next()"
---
Some(
    Ok(
        Spand {
            data: Real(
                5.0,
            ),
            span: SpanData { file_id: 0, start: 0, end: 3 },
        },
    ),
)
