src/compiler/snapshots/isa__compiler__lexer__tests__numbers-6.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"1.2\").next()"
---
Some(
    Ok(
        Spand {
            data: Real(
                1.2,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
)
