src/compiler/snapshots/isa__compiler__lexer__tests__numbers-7.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"111.2\").next()"
---
Some(
    Ok(
        Spand {
            data: Real(
                111.2,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
