src/compiler/snapshots/isa__compiler__lexer__tests__numbers.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"0000\").next()"
---
Some(
    Ok(
        Spand {
            data: Integer(
                0,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
)
