src/compiler/snapshots/isa__compiler__lexer__tests__operator-13.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"<=\").next()"
---
Some(
    Ok(
        Spand {
            data: Operator(
                "<=",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
)
